[gd_scene load_steps=10 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Button.gd" type="Script" id=2]
[ext_resource path="res://ParallaxBackground.gd" type="Script" id=3]
[ext_resource path="res://sprites/PNG/Background/bg_layer1.png" type="Texture" id=4]
[ext_resource path="res://sprites/PNG/Background/bg_layer2.png" type="Texture" id=5]
[ext_resource path="res://sprites/PNG/Background/bg_layer3.png" type="Texture" id=6]
[ext_resource path="res://sprites/PNG/Background/bg_layer4.png" type="Texture" id=7]
[ext_resource path="res://sprites/PNG/Players/bunny1_ready.png" type="Texture" id=8]
[ext_resource path="res://sprites/PNG/Environment/ground_grass_small.png" type="Texture" id=9]

[node name="TitleScreen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1024.0
margin_top = -684.0
margin_right = 1024.0
margin_bottom = 684.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Menu" type="VBoxContainer" parent="CenterContainer"]
margin_left = 982.0
margin_top = 660.0
margin_right = 1065.0
margin_bottom = 708.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Menu"]
editor/display_folded = true
margin_right = 83.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="CenterContainer/Menu/HBoxContainer"]
margin_right = 83.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Start" type="Button" parent="CenterContainer/Menu"]
margin_top = 4.0
margin_right = 83.0
margin_bottom = 24.0
shortcut_in_tooltip = false
text = "Start Game"
script = ExtResource( 2 )

[node name="Exit" type="Button" parent="CenterContainer/Menu"]
margin_top = 28.0
margin_right = 83.0
margin_bottom = 48.0
text = "Exit"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true
offset = Vector2( 512, 200 )
scale = Vector2( 0.75, 0.75 )
transform = Transform2D( 0.75, 0, 0, 0.75, 512, 200 )
script = ExtResource( 3 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
editor/display_folded = true
motion_mirroring = Vector2( 2048, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackground"]
editor/display_folded = true
motion_mirroring = Vector2( 2048, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer1"]
texture = ExtResource( 5 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
editor/display_folded = true
motion_mirroring = Vector2( 2048, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 6 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2048, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 799.269, 686.958 )
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 795.431, 832.002 )
texture = ExtResource( 9 )
[connection signal="pressed" from="CenterContainer/Menu/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/Exit" to="." method="_on_Exit_pressed"]
